--- a/anatel.ipynb
+++ b/anatel.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,43 +65,36 @@
     "df_ap2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-AP).csv', sep=';',encoding='latin-1')\n",
     "df_ba2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-BA).csv', sep=';',encoding='latin-1')\n",
     "df_ce2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-CE).csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n",
-    "df_2016 = pd.read_csv('dataset/.csv', sep=';',encoding='latin-1')\n"
+    "df_df2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-DF).csv', sep=';',encoding='latin-1')\n",
+    "df_es2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-ES).csv', sep=';',encoding='latin-1')\n",
+    "df_go2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-ES).csv', sep=';',encoding='latin-1')\n",
+    "df_ma2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-MA).csv', sep=';',encoding='latin-1')\n",
+    "df_mg2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-MG).csv', sep=';',encoding='latin-1')\n",
+    "df_ms2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-MS).csv', sep=';',encoding='latin-1')\n",
+    "df_mt2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-MT).csv', sep=';',encoding='latin-1')\n",
+    "df_nd2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-ND).csv', sep=';',encoding='latin-1')\n",
+    "df_pa2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-PA).csv', sep=';',encoding='latin-1')\n",
+    "df_pb2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-PB).csv', sep=';',encoding='latin-1')\n",
+    "df_pe2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-PE).csv', sep=';',encoding='latin-1')\n",
+    "df_pi2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-PI).csv', sep=';',encoding='latin-1')\n",
+    "df_pr2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-PR).csv', sep=';',encoding='latin-1')\n",
+    "df_rj2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-RJ).csv', sep=';',encoding='latin-1')\n",
+    "df_rn2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-RN).csv', sep=';',encoding='latin-1')\n",
+    "df_ro2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-RO).csv', sep=';',encoding='latin-1')\n",
+    "df_rr2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-RR).csv', sep=';',encoding='latin-1')\n",
+    "df_rs2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-RS).csv', sep=';',encoding='latin-1')\n",
+    "df_sc2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-SC).csv', sep=';',encoding='latin-1')\n",
+    "df_se2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-SE).csv', sep=';',encoding='latin-1')\n",
+    "df_sp2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-SP).csv', sep=';',encoding='latin-1')\n",
+    "df_to2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-TO).csv', sep=';',encoding='latin-1')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_ac2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-AC).csv', sep=';', encoding='latin-1')\n",
-    "df_al2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-AL).csv', sep=';',encoding='latin-1')\n",
-    "df_am2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-AM).csv', sep=';',encoding='latin-1')\n",
-    "df_ap2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-AP).csv', sep=';',encoding='latin-1')\n",
-    "df_ba2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-BA).csv', sep=';',encoding='latin-1')\n",
-    "df_ce2016 = pd.read_csv('dataset/Solicitações Registradas na Anatel (2016-CE).csv', sep=';',encoding='latin-1')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -114,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1322,7 @@
        "[11742 rows x 12 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
