Vericando quantidade de dados nulos

--- a/anatel.ipynb
+++ b/anatel.ipynb
@@ -164,61 +164,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Criei os datasets separados, mas acho que não vai ter utilidade."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#foi criado o dataset df_anatel2016 com todos os estados para unificar as informações do ano de 2016.\n",
-    "df_anatel2016 = pd.concat([df_ac2016,df_al2016,df_am2016,df_ap2016,df_ba2016,df_ce2016,df_df2016,df_es2016,\n",
-    "                           df_go2016,df_ma2016,df_mg2016,df_ms2016,df_mt2016,df_nd2016,df_pa2016,df_pb2016,\n",
-    "                           df_pe2016,df_pi2016,df_pr2016,df_rj2016,df_rn2016,df_ro2016,df_rr2016,df_rs2016,\n",
-    "                           df_sc2016,df_se2016,df_sp2016,df_to2016]) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#oi criado o dataset df_anatel2017 com todos os estados para unificar as informações do ano de 2017.\n",
-    "df_anatel2017 = pd.concat([df_ac2017,df_al2017,df_am2017,df_ap2017,df_ba2017,df_ce2017,df_df2017,df_es2017,\n",
-    "                           df_go2017,df_ma2017,df_mg2017,df_ms2017,df_mt2017,df_nd2017,df_pa2017,df_pb2017,\n",
-    "                           df_pe2017,df_pi2017,df_pr2017,df_rj2017,df_rn2017,df_ro2017,df_rr2017,df_rs2017,\n",
-    "                           df_sc2017,df_se2017,df_sp2017,df_to2017]) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#oi criado o dataset df_anatel2018 com todos os estados para unificar as informações do ano de 2018.\n",
-    "df_anatel2018 = pd.concat([df_ac2018,df_al2018,df_am2018,df_ap2018,df_ba2018,df_ce2018,df_df2018,df_es2018,\n",
-    "                           df_go2018,df_ma2018,df_mg2018,df_ms2018,df_mt2018,df_nd2018,df_pa2018,df_pb2018,\n",
-    "                           df_pe2018,df_pi2018,df_pr2018,df_rj2018,df_rn2018,df_ro2018,df_rr2018,df_rs2018,\n",
-    "                           df_sc2018,df_se2018,df_sp2018,df_to2018]) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Acho que so criando esse aqui ja resolve."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,35 +186,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2101218 entries, 0 to 3927\n",
-      "Data columns (total 12 columns):\n",
-      "DataExtracao     object\n",
-      "Ano              int64\n",
-      "Mes              int64\n",
-      "CanalEntrada     object\n",
-      "Condicao         object\n",
-      "GrupoEconNorm    object\n",
-      "Tipo             object\n",
-      "Servico          object\n",
-      "Modalidade       object\n",
-      "Motivo           object\n",
-      "UF               object\n",
-      "QtdeSolic        int64\n",
-      "dtypes: int64(3), object(9)\n",
-      "memory usage: 208.4+ MB\n"
-     ]
+     "data": {
+      "text/plain": [
+       "DataExtracao     0\n",
+       "Ano              0\n",
+       "Mes              0\n",
+       "CanalEntrada     0\n",
+       "Condicao         0\n",
+       "GrupoEconNorm    0\n",
+       "Tipo             0\n",
+       "Servico          0\n",
+       "Modalidade       0\n",
+       "Motivo           0\n",
+       "UF               0\n",
+       "QtdeSolic        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_anatel.info()"
+    "#verificando a quantidade de dados nulos.\n",
+    "df_anatel.isnull().sum()"
    ]
   },
   {
