--- a/anatel.ipynb
+++ b/anatel.ipynb
@@ -367,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Canais utilizados para reclamações da Anatel (telefone, site, etc.) nos 3 últimos anos(2016,2017,2018)."
+    "## 4. Canais utilizados para reclamações da Anatel ( telefone, site, etc.) nos 3 últimos anos (2016, 2017, 2018 )."
    ]
   },
   {
@@ -386,9 +386,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de reclamações de acordo com o canal\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -505,7 +512,7 @@
        "SOA                       4       4       0       8"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,9 +523,88 @@
     "\n",
     "df_canais = {2016:canais16,2017:canais17,2018:canais18,'Total':canaisTotal}\n",
     "df_canais = pd.DataFrame(data=df_canais)\n",
-    "df_canais = df_canais.fillna(0)\n",
-    "df_canais[2018] = df_canais[2018].astype('int64')\n",
+    "df_canais = df_canais.fillna(0).astype('int64')\n",
+    "\n",
+    "print(\"Número de reclamações de acordo com o canal\")\n",
     "df_canais.sort_values(by='Total',ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. As 10 maiores reclamações dos consumidores nos 3 últimos anos (2016, 2017, 2018)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recl_mod = df_anatel['Modalidade'].value_counts()\n",
+    "recl_motivo = df_anatel['Motivo'].value_counts()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cobrança                                                                519703\n",
+       "Qualidade, Funcionamento e Reparo                                       313883\n",
+       "Oferta, Bônus, Promoções, Mensagens Publicitárias e Mudança de Plano    240361\n",
+       "Cancelamento                                                            179585\n",
+       "Instalação ou Ativação ou Habilitação                                   145070\n",
+       "Bloqueio ou Suspensão e Desbloqueio                                     128387\n",
+       "Atendimento                                                             105322\n",
+       "Crédito Pré-pago                                                        102864\n",
+       "Documento de Cobrança, Contrato, Gravações                               98278\n",
+       "Ressarcimento                                                            67434\n",
+       "Name: Modalidade, dtype: int64"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recl_mod[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cobrança em desacordo com o contratado                                    71510\n",
+       "Cobrança após cancelamento                                                49554\n",
+       "Cobrança de serviço, produto ou plano não contratado                      45833\n",
+       "Instalação ou habilitação não realizada                                   43486\n",
+       "Cancelamento solicitado por meio de atendente não efetuado                39993\n",
+       "Não consegue registrar pedido de cancelamento por meio do atendente       38539\n",
+       "Cobrança de serviços adicionais não contratados                           37705\n",
+       "Cobrança de serviço, produto ou plano contratado e não disponibilizado    37649\n",
+       "Cobrança indevida de multa por fidelização (multa rescisória)             34394\n",
+       "Não consegue alterar o plano de serviço                                   34025\n",
+       "Name: Motivo, dtype: int64"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recl_motivo[:10]"
    ]
   },
   {
