--- a/anatel.ipynb
+++ b/anatel.ipynb
@@ -36,15 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "#importando as bibliotecas\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "%mat"
+    "import pandas as pd"
    ]
   },
   {
@@ -678,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +762,7 @@
        "Ressarcimento                                            67434"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,16 +775,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb9847b8278>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb9846adcf8>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
