--- a/anatel.ipynb
+++ b/anatel.ipynb
@@ -18,8 +18,8 @@
     "    <li>Operadoras com mais reclamações (nacional) nos 3 últimos anos(2016, 2017, 2018 ).</li>\n",
     "    <li>Operadoras com mais reclamações por estado nos 3 últimos anos(2016, 2017, 2018 ).</li>\n",
     "    <li>Ranking dos tipos de serviços com maiores reclamações por operadora, nos 3 últimos anos (2016, 2017, 2018 ).</li>\n",
-    "    <li>Canais utilizados para reclamações da Anatel (telefone, site, etc.) nos 3 últimos anos(2016,2017,2018).</li>\n",
-    "    <li>As 10 maiores reclamações dos consumidores nos 3 últimos anos(2016, 2017, 2018).</li>\n",
+    "    <li>Canais utilizados para reclamações da Anatel (telefone, site, etc.) nos 3 últimos anos(2016, 2017, 2018 ). </li>\n",
+    "    <li>As 10 maiores reclamações dos consumidores nos 3 últimos anos(2016, 2017, 2018 ).</li>\n",
     "    <li>Período de maior número de reclamações (se primeiro ou segundo semestre).</li>\n",
     "</ol>\n",
     "\n",
