--- a/anatel.ipynb
+++ b/anatel.ipynb
@@ -312,53 +312,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Ranking dos serviços com maiores reclamações por operadora, nos 3 últimos anos (2016, 2017, 2018 )."
+    "## 1. Operadoras com mais reclamações (nacional) nos 3 últimos anos(2016, 2017, 2018 )."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GrupoEconNorm\n",
-       "ALGAR                 17584\n",
-       "BLUE                   1189\n",
-       "Brisanet                364\n",
-       "CABO TELECOM            268\n",
-       "CLARO                280601\n",
-       "Correios Celular        626\n",
-       "Datora                   16\n",
-       "EMBRATEL                 30\n",
-       "HUGHES NET             1133\n",
-       "NET                  237697\n",
-       "NEXTEL                43674\n",
-       "NOSSA TV - BRASIL        62\n",
-       "OI                   499590\n",
-       "Outros                98860\n",
-       "SERCOMTEL              2578\n",
-       "SKY                  118234\n",
-       "TIM                  346025\n",
-       "VIVO                 452687\n",
-       "Name: GrupoEconNorm, dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#agrupando por grupo econômico e contando quantidade de registros\n",
-    "\n",
-    "df_anatel.groupby('GrupoEconNorm')['GrupoEconNorm'].count().head(50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +345,7 @@
        "Name: GrupoEconNorm, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +357,55 @@
     "street_names_cleaned.groupby(street_names_cleaned).count().head(20)\n",
     "\n",
     "count = street_names_cleaned.groupby(street_names_cleaned).count()\n",
-    "count.sort_values(ascending=False).head(20)"
+    "count.sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Ranking dos serviços com maiores reclamações por operadora, nos 3 últimos anos (2016, 2017, 2018 )."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GrupoEconNorm\n",
+       "ALGAR                 17584\n",
+       "BLUE                   1189\n",
+       "Brisanet                364\n",
+       "CABO TELECOM            268\n",
+       "CLARO                280601\n",
+       "Correios Celular        626\n",
+       "Datora                   16\n",
+       "EMBRATEL                 30\n",
+       "HUGHES NET             1133\n",
+       "NET                  237697\n",
+       "NEXTEL                43674\n",
+       "NOSSA TV - BRASIL        62\n",
+       "OI                   499590\n",
+       "Outros                98860\n",
+       "SERCOMTEL              2578\n",
+       "SKY                  118234\n",
+       "TIM                  346025\n",
+       "VIVO                 452687\n",
+       "Name: GrupoEconNorm, dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#agrupando por grupo econômico e contando quantidade de registros\n",
+    "\n",
+    "df_anatel.groupby('GrupoEconNorm')['GrupoEconNorm'].count()"
    ]
   },
   {
@@ -640,7 +647,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +836,7 @@
        "Radiochamada (Paging)                         0       1       1       2"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
